セッション周りの適応 session registration両ファイルをdeviseに紐付けた layoutファイルのパスを適応させた

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 .navbar.navbar-default.navbar-static-top.navbar-fixed-top
   .container
-    %button.navbar-toggle(type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse")
+    %button.navbar-toggle{type: "button", data: {toggle: "collapse",  data: {target: ".navbar-responsive-collapse"}}}
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
@@ -11,12 +11,11 @@
       %ul.nav.navbar-nav.navbar-right
         %li
           .btn.btn-primary.navbar-btn
-            %a{href: "/login"}
-              Get Started
+            = link_to "Get start", new_user_session_path
       //login
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
-          %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", href: "#", role: "button"}
+          %a.dropdown-toggle{aria: {expanded: "false", data: {toggle: "dropdown", href: "#", role: "button"}}}
             UserName
             %span.caret
           %ul.dropdown-menu{role: "menu"}
