ビューファイル修正 ストロングパラメーター設定

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,7 @@
       %ul.nav.navbar-nav.navbar-right
         %li
           .btn.btn-primary.navbar-btn
-            = link_to "Get start", new_user_session_path
+            = link_to "Get started", new_user_session_path
       //login
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
