--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,12 +15,13 @@
       //login
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
-          %a.dropdown-toggle{aria: {expanded: "false", data: {toggle: "dropdown", href: "#", role: "button"}}}
+          %a.dropdown-toggle{aria: {expanded: "false"}, data: {toggle: "dropdown"}, href: "#", role: "button"}
             UserName
             %span.caret
           %ul.dropdown-menu{role: "menu"}
             %li
-              %a{href: "#"} Profile Edit
+              - if user_signed_in?
+                = link_to "Profile Edit", edit_user_path(current_user)
             %li
               %a{href: "#"} Logout
         %li
