--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,11 +19,11 @@
             UserName
             %span.caret
           %ul.dropdown-menu{role: "menu"}
-            %li
-              - if user_signed_in?
+            - if user_signed_in?
+              %li
                 = link_to "Profile Edit", edit_user_path(current_user)
-            %li
-              %a{href: "#"} Logout
+              %li
+                = link_to "Log out", destroy_user_session_path, method: :delete
         %li
           .btn.btn-primary.navbar-btn
             %a{href: "/proto/new"}
