--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,18 +13,18 @@
           .btn.btn-primary.navbar-btn
             = link_to "Get started", new_user_session_path
       //login
-      %ul.nav.navbar-nav.navbar-right
-        %li.dropdown
-          %a.dropdown-toggle{aria: {expanded: "false"}, data: {toggle: "dropdown"}, href: "#", role: "button"}
-            UserName
-            %span.caret
-          %ul.dropdown-menu{role: "menu"}
-            - if user_signed_in?
+      - if user_signed_in?
+        %ul.nav.navbar-nav.navbar-right
+          %li.dropdown
+            %a.dropdown-toggle{aria: {expanded: "false"}, data: {toggle: "dropdown"}, href: "#", role: "button"}
+              #{current_user.name}
+              %span.caret
+            %ul.dropdown-menu{role: "menu"}
               %li
                 = link_to "Profile Edit", edit_user_path(current_user)
               %li
                 = link_to "Log out", destroy_user_session_path, method: :delete
-        %li
-          .btn.btn-primary.navbar-btn
-            %a{href: "/proto/new"}
-              New Proto
+          %li
+            .btn.btn-primary.navbar-btn
+              %a{href: "/proto/new"}
+                New Proto
