--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -1,36 +1,45 @@
-%form.container.proto-new{action: ""}
-  .col-md-8.col-md-offset-2
-    %header.row.user-nav.row
-      .col-md-12
-        %input.proto-new-title{type: "text", placeholder: "Title"}/
-    .row
-      .col-md-12
-        .cover-image-upload
-          %input{type: "file"}/
-      .col-md-12
-        %ul.proto-sub-list.list-group
-          %li.list-group-item.col-md-4
-            .image-upload
-              %input{type: "file"}/
-          %li.list-group-item.col-md-4
-            .image-upload
-              %input{type: "file"}/
-          %li.list-group-item.col-md-4
-            .image-upload-plus
-              %span +
-    .row.proto-description
-      .col-md-12
-        %input{type: "text", placeholder: "Catch Copy"}/
-      .col-md-12
-        %textarea{name: "", cols: "30", rows: "4", placeholder: "Concept"}
-      .col-md-12
-        %h4 Tag List
-        .row
-          .col-md-3
-            %input{type: "text", placeholder: "Web Design"}/
-          .col-md-3
-            %input{type: "text", placeholder: "UI"}/
-          .col-md-3
-            %input{type: "text", placeholder: "Application"}/
-    .row.text-center.proto-btn
-      %button.btn.btn-lg.btn-primary.btn-block{type: "submit"} Publish
+.container.proto-new
+  = form_for(@prototype) do |f|
+    .col-md-8.col-md-offset-2
+      %header.row.user-nav.row
+        .col-md-12
+          / %input.proto-new-title{type: "text", placeholder: "Title"}/
+          = f.text_field :title, placeholder: "Title"
+      .row
+      = fields_for(@image) do |t|
+        .col-md-12
+          .cover-image-upload
+            / %input{type: "file"}/
+            = t.file_field :content_type, :main
+        .col-md-12
+          %ul.proto-sub-list.list-group
+            %li.list-group-item.col-md-4
+              .image-upload
+                / %input{type: "file"}/
+                = t.file_field :content_type, :sub
+            %li.list-group-item.col-md-4
+              .image-upload
+                / %input{type: "file"}/
+                = t.file_field :content_type, :sub
+            %li.list-group-item.col-md-4
+              .image-upload-plus
+                %span +
+      .row.proto-description
+        .col-md-12
+          / %input{type: "text", placeholder: "Catch Copy"}/
+          = f.text_field :catch_copy, placeholder: "Catch Copy"
+        .col-md-12
+          %textarea{name: "", cols: "30", rows: "4", placeholder: "Concept"}
+          = f.text_area :concept, placeholder: "Concept", cols: 30, rows: 4
+        .col-md-12
+          %h4 Tag List
+          .row
+            .col-md-3
+              %input{type: "text", placeholder: "Web Design"}/
+            .col-md-3
+              %input{type: "text", placeholder: "UI"}/
+            .col-md-3
+              %input{type: "text", placeholder: "Application"}/
+      .row.text-center.proto-btn
+        / %button.btn.btn-lg.btn-primary.btn-block{type: "submit"} Publish
+        = f.submit 'Publish', class: "btn btn-lg btn-primary btn-block"
