--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -1,36 +1,28 @@
-.container.proto-new
-  = form_for(@prototype) do |f|
-    .col-md-8.col-md-offset-2
+.container.proto-new{action: ""}
+  .col-md-8.col-md-offset-2
+    = form_for @prototype do |f|
       %header.row.user-nav.row
         .col-md-12
-          / %input.proto-new-title{type: "text", placeholder: "Title"}/
-          = f.text_field :title, placeholder: "Title"
+          = f.text_field :title, placeholder: "Title", class:"proto-new-title"
       .row
-      = fields_for(@image) do |t|
         .col-md-12
           .cover-image-upload
-            / %input{type: "file"}/
-            = t.file_field :content_type, :main
+            = f.fields_for :images do |img|
+              = img.file_field :image
+              = img.hidden_field :satus, value: :main
         .col-md-12
           %ul.proto-sub-list.list-group
-            %li.list-group-item.col-md-4
-              .image-upload
-                / %input{type: "file"}/
-                = t.file_field :content_type, :sub
-            %li.list-group-item.col-md-4
-              .image-upload
-                / %input{type: "file"}/
-                = t.file_field :content_type, :sub
-            %li.list-group-item.col-md-4
-              .image-upload-plus
-                %span +
+            -3.times do
+              %li.list-group-item.col-md-4
+                .image-upload
+                  = f.fields_for :images do |img|
+                    = img.file_field :image
+                    = img.hidden_field :satus, value: :sub
       .row.proto-description
         .col-md-12
-          / %input{type: "text", placeholder: "Catch Copy"}/
           = f.text_field :catch_copy, placeholder: "Catch Copy"
         .col-md-12
-          %textarea{name: "", cols: "30", rows: "4", placeholder: "Concept"}
-          = f.text_area :concept, placeholder: "Concept", cols: 30, rows: 4
+          = f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept"
         .col-md-12
           %h4 Tag List
           .row
@@ -41,5 +33,4 @@
             .col-md-3
               %input{type: "text", placeholder: "Application"}/
       .row.text-center.proto-btn
-        / %button.btn.btn-lg.btn-primary.btn-block{type: "submit"} Publish
-        = f.submit 'Publish', class: "btn btn-lg btn-primary btn-block"
+        = f.submit "Publish", class: "btn btn-lg btn-primary btn-block"
