--- a/app/views/prototypes/new.html.haml
+++ b/app/views/prototypes/new.html.haml
@@ -8,16 +8,16 @@
         .col-md-12
           .cover-image-upload
             = f.fields_for :images do |img|
-              = img.file_field :image
-              = img.hidden_field :satus, value: :main
+              = img.file_field :content
+              = img.hidden_field :content_type, value: :main
         .col-md-12
           %ul.proto-sub-list.list-group
             -3.times do
               %li.list-group-item.col-md-4
                 .image-upload
                   = f.fields_for :images do |img|
-                    = img.file_field :image
-                    = img.hidden_field :satus, value: :sub
+                    = img.file_field :content
+                    = img.hidden_field :content_type, value: :sub
       .row.proto-description
         .col-md-12
           = f.text_field :catch_copy, placeholder: "Catch Copy"
